syntax = "proto3";

option java_package = "com.proto.average";
option java_multiple_files = true;

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  double averageOutput = 1;
}

service Average {
  rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {};
}
